src/type_atoms/snapshots/syn_state_machine__type_atoms__proc_macro_items__tests_punct__it_matches_both.snap
---
source: src/type_atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse (FJointPunct<'<'>, FAlonePunct<'='>) : <=),\n    insta_match_test!(* peek (FJointPunct<'<'>, FAlonePunct<'='>) : <=))"
---
(
    Ok(
        (
            FJointPunct(
                Span,
            ),
            FAlonePunct(
                Span,
            ),
        ),
    ),
    Some(
        2,
    ),
)
