src/type_atoms/snapshots/syn_state_machine__type_atoms__proc_macro_items__tests_punct__it_matches_fixed.snap
---
source: src/type_atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse FPunct<'<'> : <),\n    insta_match_test!(* peek FPunct<'<'> : <))"
---
(
    Ok(
        FPunct(
            Span,
        ),
    ),
    Some(
        1,
    ),
)
