src/type_atoms/snapshots/syn_state_machine__type_atoms__proc_macro_items__tests_punct__it_matches_only.snap
---
source: src/type_atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ + Punct : <), insta_match_test!(* * Punct : <))"
---
(
    Ok(
        Punct {
            char: '<',
            spacing: Alone,
        },
    ),
    Some(
        1,
    ),
)
